Initial work - Added ManagedAuthClientManager, used as a wrapper to handle several environments. - environment.ts updated to use new JSON array data structure. - Updated all APIs to use ManagedAuthClientManager wrapper functions. - formatResponse functions updated to handle several data sources - Minimal updates to instructions for LLM. More to do here

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,23 @@
 ## Dynatrace Managed Configuration
-# DT_MANAGED_ENVIRONMENT=01234567-89ab-cdef-abcd-ef0123456789
-# DT_API_ENDPOINT_URL=https://abc123.dynatrace-managed.example.com:9999
-# DT_DYNATRACE_URL=https://dmz123.dynatrace-managed.example.com
-# DT_MANAGED_API_TOKEN=dt0s16.SAMPLE.abcd1234
+# Proxy configuration optional (for corporate environments)
+DT_ENVIRONMENT_CONFIGS='[
+{
+    "dynatraceUrl": "https://dmz456.dynatrace-managed.com",
+    "apiEndpointUrl": "https://dmz456-ag.dynatrace-managed.com",
+    "environmentId": "abcdef-0124-4567-890a-bcdef0124",
+    "alias": "ENVIRONMENT 1",
+    "apiToken": "dt0s16.SAMPLE.efgh4567",
+    "httpProxyUrl": "",
+    "httpsProxyUrl": ""
+  },
+  {
+    "dynatraceUrl": "https://dmz456.dynatrace-managed.com",
+    "apiEndpointUrl": "https://dmz456-ag.dynatrace-managed.com",
+    "environmentId": "abcdef-0124-4567-890a-bcdef0124",
+    "alias": "ENVIRONMENT 2",
+    "apiToken": "dt0s16.SAMPLE.efgh4567",
+    "httpProxyUrl": "",
+    "httpsProxyUrl": ""
+  }
+]'
 
-# Proxy configuration (optional - for corporate environments)
-# HTTPS_PROXY=http://proxy.example.com:8080
