- Fixed unit tests to pass with the new logic - Reworked environment.test.ts to touch more cases with the new multienvironment approach. - Fixed 2 out of 4 integrations test files (working on those other 2) - Fixed getEntityRelationships to return expected response structure - Fixed ManagedAuthClient to instance proxy data on creation - Removed 'dynatraceUrl' from required configuration fields. - Updated .env.template

--- a/.env.template
+++ b/.env.template
@@ -1,23 +1,24 @@
 ## Dynatrace Managed Configuration
 # Proxy configuration optional (for corporate environments)
+# Mandatory keys are: "apiEndpointUrl", "environmentId", "alias" and "apiToken"
+
 DT_ENVIRONMENT_CONFIGS='[
-{
-    "dynatraceUrl": "https://dmz456.dynatrace-managed.com",
-    "apiEndpointUrl": "https://dmz456-ag.dynatrace-managed.com",
-    "environmentId": "abcdef-0124-4567-890a-bcdef0124",
-    "alias": "ENVIRONMENT 1",
-    "apiToken": "dt0s16.SAMPLE.efgh4567",
-    "httpProxyUrl": "",
-    "httpsProxyUrl": ""
+  {
+    "dynatraceUrl": "https://my-dashboard-endpoint.com/",
+    "apiEndpointUrl": "https://my-api-endpoint.com/",
+    "environmentId": "my-env-id-1",
+    "alias": "alias-env",
+    "apiToken": "my-api-token",
+    "httpProxyUrl": ""'
+    "httpsProxyUrl": ""'
   },
   {
-    "dynatraceUrl": "https://dmz456.dynatrace-managed.com",
-    "apiEndpointUrl": "https://dmz456-ag.dynatrace-managed.com",
-    "environmentId": "abcdef-0124-4567-890a-bcdef0124",
-    "alias": "ENVIRONMENT 2",
-    "apiToken": "dt0s16.SAMPLE.efgh4567",
-    "httpProxyUrl": "",
-    "httpsProxyUrl": ""
+    "dynatraceUrl": "https://my-dashboard2-endpoint.com/",
+    "apiEndpointUrl": "https://my-api2-endpoint.com/",
+    "environmentId": "my-env-id-2",
+    "alias": "alias-env-2",
+    "apiToken": "my-api-token-2",
+    "httpProxyUrl": ""'
+    "httpsProxyUrl": ""'
   }
 ]'
-
