Updating README for multi-env, plus spelling/grammar/syntax/formatting

--- a/.env.template
+++ b/.env.template
@@ -9,8 +9,8 @@ DT_ENVIRONMENT_CONFIGS='[
     "environmentId": "my-env-id-1",
     "alias": "alias-env",
     "apiToken": "my-api-token",
-    "httpProxyUrl": ""'
-    "httpsProxyUrl": ""'
+    "httpProxyUrl": "",
+    "httpsProxyUrl": ""
   },
   {
     "dynatraceUrl": "https://my-dashboard2-endpoint.com/",
@@ -18,7 +18,7 @@ DT_ENVIRONMENT_CONFIGS='[
     "environmentId": "my-env-id-2",
     "alias": "alias-env-2",
     "apiToken": "my-api-token-2",
-    "httpProxyUrl": ""'
-    "httpsProxyUrl": ""'
+    "httpProxyUrl": "",
+    "httpsProxyUrl": ""
   }
 ]'
