Multi-environment support

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,24 @@
 ## Dynatrace Managed Configuration
-# DT_MANAGED_ENVIRONMENT=01234567-89ab-cdef-abcd-ef0123456789
-# DT_API_ENDPOINT_URL=https://abc123.dynatrace-managed.example.com:9999
-# DT_DYNATRACE_URL=https://dmz123.dynatrace-managed.example.com
-# DT_MANAGED_API_TOKEN=dt0s16.SAMPLE.abcd1234
+# Proxy configuration optional (for corporate environments)
+# Mandatory keys are: "apiEndpointUrl", "environmentId", "alias" and "apiToken"
 
-# Proxy configuration (optional - for corporate environments)
-# HTTPS_PROXY=http://proxy.example.com:8080
+DT_ENVIRONMENT_CONFIGS='[
+  {
+    "dynatraceUrl": "https://my-dashboard-endpoint.com/",
+    "apiEndpointUrl": "https://my-api-endpoint.com/",
+    "environmentId": "my-env-id-1",
+    "alias": "alias-env",
+    "apiToken": "my-api-token",
+    "httpProxyUrl": "",
+    "httpsProxyUrl": ""
+  },
+  {
+    "dynatraceUrl": "https://my-dashboard2-endpoint.com/",
+    "apiEndpointUrl": "https://my-api2-endpoint.com/",
+    "environmentId": "my-env-id-2",
+    "alias": "alias-env-2",
+    "apiToken": "my-api-token-2",
+    "httpProxyUrl": "",
+    "httpsProxyUrl": ""
+  }
+]'
